@@ -6274,3 +6274,6 @@ PACKAGE: 2.2.99.2
 2007-02-19 cjg
  * Added has_role method to User.pm
  * Fixed broken calls to $user->has_priv to use $user->has_role instead.
+
+2007-02-19 cjg
+ * If a title contains a link, it no longer shows the URL in the <title> element.
